https for redditgraphed

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         </div>
         <div class="row">
           <div class="col-md-3">
-            <a href="http://github.com/slashrocket/redditgraphed"><img src="/images/redditgraphed.png" class="img-responsive img-thumbnail" alt="A screen shot of the redditgraphed web site"></a>
+            <a href="https://github.com/slashrocket/redditgraphed"><img src="/images/redditgraphed.png" class="img-responsive img-thumbnail" alt="A screen shot of the redditgraphed web site"></a>
             <h2 class="text-center">redditgraphed</h2>
             <p class="text-center">analysis of reddit posts</p>
           </div>
