--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="row">
           <div class="col-md-12">
             <h1 class="text-center">join our community</h1>
-            <p class="text-center lead">slashrocket is a community of over 1,000 developers of all backgrounds. we work together to create projects as a group, discuss development, and provide a friendly home on the web for developers. we adhere to a <a href="//slashrocket.io/CodeOfConduct">code of conduct</a> so everyone feels welcome.</p>
+            <p class="text-center lead">slashrocket is a community of developers of all backgrounds. we work together to create projects as a group, discuss development, and provide a friendly home on the web for developers. we adhere to a <a href="//slashrocket.io/CodeOfConduct">code of conduct</a> so everyone feels welcome.</p>
             <p class="text-center lead">use the button below to join our community!</p>
             <p class="text-center"><script async defer src="//join.slashrocket.io/slackin.js?large"></script></p>
           </div>
