--- a/index.html
+++ b/index.html
@@ -6,46 +6,13 @@
     <title>slashrocket</title>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/stylesheets/style.css" rel="stylesheet" type="text/css">
     <link href="images/slashrocketicon.png" rel="icon" type="image">
   </head>
   <body>
-    <div class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="https://slashrocket.io/"><span><img src="/images/slashrocketicon.png" height="25" width="25" alt="Slashrocket logo"></span></a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbar-ex-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li>
-              <a href="#section-slack" onclick="scrollme(this) return false;">slack</a>
-            </li>
-            <li>
-              <a href="#section-events" onclick="scrollme(this) return false;">events</a>
-            </li>
-            <li>
-              <a href="#section-projects" onclick="scrollme(this) return false;">projects</a>
-            </li>
-            <li>
-              <a href="#section-patreon" onclick="scrollme(this) return false;">patreon</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
     <div class="section">
       <div class="container">
-        <div class="row">
-          <div class="col-xs-12"></div>
-        </div>
         <div class="row">
           <div class="col-md-12 col-md-offset-1">
             <img class="img-responsive" src="/images/slashrocket.png" alt="Slashrocket logo" style="width: 75%; height: 75%">
@@ -59,119 +26,22 @@
         </div>
       </div>
     </div>
-    <hr>
-    <div class="section" id="section-slack">
+    <div class="section" id="section-discord">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="text-center">join our community</h1>
-            <p class="text-center lead">slashrocket is a community of developers of all backgrounds. we work together to create projects as a group, discuss development, and provide a friendly home on the web for developers. we adhere to a <a href="//slashrocket.io/CodeOfConduct">code of conduct</a> so everyone feels welcome.</p>
+            <h1>join our community</h1>
+            <p class="lead">slashrocket is a community of developers of all backgrounds. we enjoy discussing development and provide a friendly home on the web for developers. we adhere to a <a href="//slashrocket.io/CodeOfConduct">code of conduct</a> so everyone feels welcome.</p>
             <p class="text-center lead">use the button below to join our community!</p>
-            <p class="text-center"><script async defer src="//join.slashrocket.io/slackin.js?large"></script></p>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4 col-md-offset-4">
-            <a href="https://slashrocket.slack.com"><img src="images/slack_rgb.png" class="img-responsive"></a>
+            <a href="https://discord.gg/bQcFv8B"><img src="/images/discord-purple.svg" class="img-responsive"></a>
           </div>
         </div>
       </div>
     </div>
-    <hr>
-    <div class="section" id="section-events">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1 class="text-center">slashrocket events</h1>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3">
-            <img src="images/launch2015.png" id="launch-rocket" class="img">
-            <h1 class="text-center">Code Launch 2015</h1>
-            <p class="text-center lead">slashrocket hosted its inaugural hackathon!</p>
-            <p class="text-center lead">July 11-19, 2015</p>
-            <p class="text-center lead"><a href="https://hackathon.slashrocket.io">more info</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <hr>
-    <div class="section" id="section-projects">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1 class="text-center">projects by the slashrocket team</h1>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3">
-            <a href="https://github.com/slashrocket/redditgraphed"><img src="/images/redditgraphed.png" class="img-responsive img-thumbnail" alt="A screen shot of the redditgraphed web site"></a>
-            <h2 class="text-center">redditgraphed</h2>
-            <p class="text-center">analysis of reddit posts</p>
-          </div>
-          <div class="col-md-3">
-            <a href="https://github.com/slashrocket/stationstream"><img src="/images/stationstream.png" class="img-responsive img-thumbnail" alt="A screen shot of the stationstream web site"></a>
-            <h2 class="text-center">stationstream</h2>
-            <p class="text-center">real-time tracking of the ISS</p>
-          </div>
-          <div class="col-md-3">
-            <a href="https://github.com/slashrocket/reactif"><img src="/images/reactif.png" class="img-responsive img-thumbnail" alt="A screen shot of the reactif source code"></a>
-            <h2 class="text-center">reactif</h2>
-            <p class="text-center">better gif search for slack</p>
-          </div>
-          <div class="col-md-3">
-            <a href="https://github.com/slashrocket"><img src="/images/placeholder.png" class="img-responsive img-thumbnail" alt="A placeholder image"></a>
-            <h2 class="text-center">upcoming project...</h2>
-            <p class="text-center">help us make something great!</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12" style="height:50px;"></div>
-        </div>
-      </div>
-    </div>
-    <hr>
-    <div class="section" id="section-patreon">
-      <div class="container">
-        <div class="row">
-          <h1 class="text-center">become a patron</h1>
-          <p class="text-center lead">we're trying to build neat things for our community, but we can't do it alone. help us out by joining our patreon campaign and getting some cool stuff in return.</p>
-          <div class="col-md-4 col-md-offset-4">
-            <a href="https://www.patreon.com/slashrocket"><img src="images/patreonlogoorange.png" alt="Patreon" class="img-responsive"></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <footer class="section section-primary">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6">
-            <h1>slashrocket</h1>
-            <p>a developer community</p>
-          </div>
-          <div class="col-sm-6">
-            <p class="text-info text-right">
-              <br>
-            </p>
-            <div class="row">
-              <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
-                <a href="https://slashrocket.slack.com/"><i class="fa fa-3x fa-fw fa-slack text-inverse"></i></a>
-                <a href="https://twitter.com/slashrocketio"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
-                <a href="https://github.com/slashrocket"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12 hidden-xs text-right" id="section-footer">
-                <a href="https://slashrocket.slack.com/"><i class="fa fa-3x fa-fw text-inverse fa-slack"></i></a>
-                <a href="https://twitter.com/slashrocketio"><i class="fa fa-3x fa-fw text-inverse fa-twitter"></i></a>
-                <a href="https://github.com/slashrocket"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
   </body>
   <script type="text/javascript" src="js/smoothscroll.js"></script>
   <script src="//static.getclicky.com/js" type="text/javascript"></script>
